<resources>
    <string name="app_name">PocketCoin</string>

    <string name="rank_text">Rank:</string>
    <string name="price_text">Price:</string>
    <string name="marketcap_text">Market Cap:</string>
    <string name="volume_text">24 Hour Volume:</string>
    <string name="perchange_text">Percent Change:</string>
    <string name="twentyfourh_text" translatable="false">24h:</string>
    <string name="oneh_text" translatable="false">1h:</string>
    <string name="sevend_text" translatable="false">7d:</string>
    <string name="watchlist_title">Watch List</string>
    <string name="settings_title">Settings</string>
    <string name="details_title">Details</string>
    <string name="allcoins_title">All Coins</string>
    <string name="info_title">Info</string>
    <string name="delete_alert">Remove Coin</string>
    <string name="deleteconfirm_dialog">Are you sure you want to remove %s from your watch list?</string>
    <string name="deletesuccess_dialog">%s removed from watch list</string>
    <string name="addsuccess_dialog">%s added to watch list</string>
    <string name="addcoin_text" translatable="false">+</string>
    <string name="removecoin_text">Remove</string>
    <string name="yes_text">Yes</string>
    <string name="cancel_text">Cancel</string>

    <string name="return_button_desc" translatable="false">Allows return</string>
    <string name="add_button_desc" translatable="false">Adds to list</string>
    <string name="remove_button_desc" translatable="false">Removes from list</string>
    <string name="coinicon_desc" translatable="false">Icon of coin</string>

    <string name="coinlore_attribution" translatable="false">Powered by CoinLore</string>

    <string name="no_connection">No Internet Connection</string>
    <string name="circsupply_text">Circulating Supply:</string>
    <string name="totalsupply_text">Total Supply:</string>
    <string name="loading_watchlist_coins_text">Retrieving Watchlist…</string>
    <string name="loading_all_coins_textView">Retrieving coins…</string>

</resources>