<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_watchlist">

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.jaguiler.pocketcoin.ui.watchlist.WatchlistFragment"
        android:label="@string/watchlist_title"
        tools:layout="@layout/watchlist_fragment" >
        <action
            android:id="@+id/action_navigation_watchlist_to_navigation_coindetail"
            app:destination="@id/navigation_coindetail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_allcoins"
        android:name="com.jaguiler.pocketcoin.ui.allcoins.CoinsFragment"
        android:label="@string/allcoins_title"
        tools:layout="@layout/coins_fragment" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.jaguiler.pocketcoin.ui.info.InfoFragment"
        android:label="@string/info_title"
        tools:layout="@layout/info_fragment" >
        <action
            android:id="@+id/action_navigation_info_to_navigation_watchlist"
            app:destination="@id/navigation_watchlist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_coindetail"
        android:name="com.jaguiler.pocketcoin.ui.coindetail.CoinDetailFragment"
        android:label="@string/details_title"
        tools:layout="@layout/coin_detail_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jaguiler.pocketcoin.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/settings_fragment" />

</navigation>