<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coin_list_item_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:visibility="visible"
    app:cardBackgroundColor="@color/azure_blue_light"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coin_list_item_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/coin_list_item_outline"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_coinicon_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/coinicon_desc"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_coinname_textView"
            tools:srcCompat="@drawable/bitcoin_sym" />

        <TextView
            android:id="@+id/list_coinname_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/list_namenicon_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/list_priceusd_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_priceusd_value_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_priceusd_textView"
            tools:text="$40,000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/list_priceusd_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57" />

        <TextView
            android:id="@+id/list_percentchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/perchange_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_priceusd_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_hourchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/oneh_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_priceusd_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_percentchange_textView" />

        <TextView
            android:id="@+id/list_hourchange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/list_hourchange_textView"
            app:layout_constraintStart_toEndOf="@+id/list_hourchange_textView"
            tools:text="0.19" />

        <TextView
            android:id="@+id/list_daychange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/twentyfourh_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_priceusd_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_hourchange_textView" />

        <TextView
            android:id="@+id/list_daychange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/list_daychange_textView"
            app:layout_constraintStart_toEndOf="@+id/list_daychange_textView"
            tools:text="-1.27" />

        <TextView
            android:id="@+id/list_weekchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sevend_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_priceusd_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_daychange_textView" />

        <TextView
            android:id="@+id/list_weekchange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/list_weekchange_textView"
            app:layout_constraintStart_toEndOf="@+id/list_weekchange_textView"
            tools:text="-0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/list_percentchange_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <ImageButton
            android:id="@+id/list_removefromlist_imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_button_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/list_percentchange_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sharp_remove_circle_24" />

        <TextView
            android:id="@+id/list_day_volume_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/volume_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_priceusd_value_textView" />

        <TextView
            android:id="@+id/list_day_volume_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/list_namenicon_guideline"
            app:layout_constraintTop_toBottomOf="@+id/list_day_volume_textView"
            tools:text="$50,000,000,000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>