<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coindetail_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure_blue"
    tools:context=".ui.coindetail.CoinDetailFragment">

    <ImageButton
        android:id="@+id/detail_return_imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintBottom_toTopOf="@+id/return_guideline1"
        app:layout_constraintEnd_toStartOf="@+id/return_guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/return_button_desc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/return_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/return_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <ImageView
        android:id="@+id/det_coinicon_imageView"
        android:layout_width="75dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/bitcoin_sym"
        app:layout_constraintEnd_toEndOf="@+id/det_coinacr_textView"
        app:layout_constraintStart_toStartOf="@+id/det_coinacr_textView"
        app:layout_constraintTop_toBottomOf="@+id/det_coinacr_textView"
        android:contentDescription="@string/coinicon_desc"/>

    <TextView
        android:id="@+id/det_coinname_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/return_guideline1"
        tools:text="Bitcoin" />

    <TextView
        android:id="@+id/det_coinacr_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/det_coinname_textView"
        app:layout_constraintStart_toStartOf="@+id/det_coinname_textView"
        app:layout_constraintTop_toBottomOf="@+id/det_coinname_textView"
        tools:text="BTC" />

    <TextView
        android:id="@+id/det_priceusd_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/det_coinicon_imageView"
        app:layout_constraintStart_toStartOf="@+id/det_coinicon_imageView"
        app:layout_constraintTop_toBottomOf="@+id/det_coinicon_imageView"
        tools:text="$56,700.86" />

    <ScrollView
        android:id="@+id/furtherdetails_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/further_details_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/det_priceusd_textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/furtherdetails_constraintLayout_inScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/det_coinrank_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rank_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/det_coinrank_val_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/det_coinrank_textView"
                app:layout_constraintStart_toStartOf="@+id/det_coinrank_textView"
                app:layout_constraintTop_toBottomOf="@+id/det_coinrank_textView"
                tools:text="1" />

            <TextView
                android:id="@+id/det_percentchange_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/perchange_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/det_coinrank_val_textView"
                app:layout_constraintEnd_toEndOf="@id/det_coinrank_val_textView"
                app:layout_constraintTop_toBottomOf="@+id/det_coinrank_val_textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/det_percentchange_textView"
                app:layout_constraintStart_toStartOf="@+id/det_percentchange_textView"
                app:layout_constraintTop_toBottomOf="@+id/det_percentchange_textView">

                <TextView
                    android:id="@+id/det_oneh_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneh_text"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/det_oneh_val_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="-0.12" />

                <TextView
                    android:id="@+id/det_twentyfourh_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    tools:text="@string/twentyfourh_text" />

                <TextView
                    android:id="@+id/det_twentyfourh_val_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/green_darker"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="0.93" />

                <TextView
                    android:id="@+id/det_week_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/sevend_text"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/det_week_val_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="-12.3" />
            </LinearLayout>

            <TextView
                android:id="@+id/det_marketcap_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/marketcap_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/det_marketcap_val_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/det_marketcap_textView"
                app:layout_constraintStart_toStartOf="@+id/det_marketcap_textView"
                app:layout_constraintTop_toBottomOf="@+id/det_marketcap_textView"
                tools:text="$1,058,447,962,251.10" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/volume_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/det_marketcap_val_textView"
                app:layout_constraintStart_toStartOf="@+id/det_marketcap_val_textView"
                app:layout_constraintTop_toBottomOf="@+id/det_marketcap_val_textView" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                tools:text="$56,351,701,278" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/circsupply_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                tools:text="18,697,565" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="24sp"
                android:text="@string/totalsupply_text"
                app:layout_constraintEnd_toEndOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                tools:text="18,697,565" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>