<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coin_gen_item_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:visibility="visible"
    app:cardBackgroundColor="@color/azure_blue"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coin_gen_item_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/coin_gen_item_outline"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/coinicon_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/coinicon_desc"
            android:scaleType="fitXY"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/namenicon_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinname_textView"
            tools:srcCompat="@drawable/bitcoin_sym" />

        <TextView
            android:id="@+id/coinname_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/namenicon_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/namenicon_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/priceusd_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/namenicon_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceusd_value_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/hourchange_textView"
            app:layout_constraintStart_toStartOf="@+id/namenicon_guideline"
            app:layout_constraintTop_toBottomOf="@+id/priceusd_textView"
            tools:text="$40,000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/priceusd_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <TextView
            android:id="@+id/percentchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/perchange_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/priceusd_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hourchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/oneh_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/priceusd_guideline"
            app:layout_constraintTop_toBottomOf="@+id/percentchange_textView" />

        <TextView
            android:id="@+id/hourchange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/hourchange_textView"
            app:layout_constraintStart_toEndOf="@+id/hourchange_textView"
            tools:text="0.19" />

        <TextView
            android:id="@+id/daychange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/twentyfourh_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/hourchange_val_textView"
            app:layout_constraintTop_toBottomOf="@+id/percentchange_textView" />

        <TextView
            android:id="@+id/daychange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/daychange_textView"
            app:layout_constraintStart_toEndOf="@+id/daychange_textView"
            tools:text="-1.27" />

        <TextView
            android:id="@+id/weekchange_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sevend_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/daychange_val_textView"
            app:layout_constraintTop_toBottomOf="@+id/percentchange_textView" />

        <TextView
            android:id="@+id/weekchange_val_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/weekchange_textView"
            app:layout_constraintStart_toEndOf="@+id/weekchange_textView"
            tools:text="-0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/percentchange_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <ImageButton
            android:id="@+id/addtolist_imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/percentchange_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_circle_24"
            android:contentDescription="@string/remove_button_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>